    configured but fails, prevent initialization. This allows the user to
    fix their configuration and avoid crippled filesystem detection
    entering an adjusted branch.
  * map: Support --json option.
  * map: Improve display of remote names.
  * Windows: Fix duplicate file bug that could occur when files were
    supposed to be moved across devices.

 -- Joey Hess <id@joeyh.name>  Thu, 22 May 2025 12:43:38 -0400

git-annex (10.20250520) upstream; urgency=medium

  * Preferred content now supports "balanced=groupname:lackingcopies"
    to make files be evenly balanced amoung as many repositories as are
    needed to satisfy numcopies.
  * map: Fix buggy handling of remotes that are bare git repositories
    accessed via ssh.
  * map: Avoid looping forever with mutually recursive paths between
    repositories accessed via ssh.
  * whereused: Fix bug that could find matches from grafts 
    in remote git-annex branches.
  * Windows: Fix bug that can cause git status to show annexed files as
    modified when built with OsPath.

 -- Joey Hess <id@joeyh.name>  Tue, 20 May 2025 10:25:47 -0400

git-annex (10.20250416) upstream; urgency=medium

  * Added the mask special remote.
  * updatecluster, updateproxy: When a remote that has no annex-uuid is
    configured as annex-cluster-node, warn and avoid writing bad data to
    the git-annex branch.
  * Fix build without the assistant.
  * fsck: Avoid complaining about required content of dead repositories.
  * drop: Avoid redundant object directory thawing.
  * httpalso: Windows url fix.
  * Added remote.name.annex-web-options config, which is a per-remote
    version of the annex.web-options config.
  * migrate: Fix --remove-size to work when a file is not present.
    Fixes reversion introduced in version 10.20231129.
  * Support git remotes that use a IPV6 link-local address with a zone ID.
  * Support git remotes that use an url with a user name that is URL